--- a/Homework 1/Homework 1 - Tokenization and segmentation.ipynb
+++ b/Homework 1/Homework 1 - Tokenization and segmentation.ipynb
@@ -43,14 +43,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['the', 'cat', 'in', 'the', 'hat', 'ate', 'the', 'rat', 'in', 'the', 'vat']\n"
+      "['The', 'cat', 'in', 'the', 'hat', 'ate', 'the', 'rat', 'in', 'the', 'vat']\n"
      ]
     }
    ],
@@ -59,7 +59,7 @@
     "    if do_lower:\n",
     "       s = str.lower(s)\n",
     "    return str.split(s)\n",
-    "print(get_words('The cat in the hat ate the rat in the vat'))"
+    "print(get_words('The cat in the hat ate the rat in the vat', False))"
    ]
   },
   {
@@ -102,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -157,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -213,7 +213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -315,7 +315,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -380,7 +380,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -401,6 +401,7 @@
     "        if x.isalpha() == False:\n",
     "            s.remove(x)\n",
     "    return s\n",
+    "    \n",
     "output = count_words(filter_nonwords(alice)).most_common(5)\n",
     "for x in output:\n",
     "    print(x[0], '\\t', x[1])\n"
@@ -442,7 +443,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -473,8 +474,8 @@
     "    if os.path.isfile(f):\n",
     "        file = open(f)\n",
     "        gutenbergData = file.read()\n",
-    "output1 = count_words(filter_nonwords(tokenize(gutenbergData, do_lower=True))).most_common(5)\n",
-    "output2 = count_words(filter_nonwords(tokenize(gutenbergData, do_lower=False))).most_common(5)\n",
+    "output1 = count_words(filter_nonwords(tokenize(gutenbergData, True))).most_common(5)\n",
+    "output2 = count_words(filter_nonwords(tokenize(gutenbergData, False))).most_common(5)\n",
     "print('do_lower=True')\n",
     "for x in output1:\n",
     "    print(x[0], '\\t', x[1])\n",
@@ -506,7 +507,7 @@
     "\n",
     "2. The result of do_lower=False does not count all the words in 1 count object. This makes do_lower=True a better result because it counts all the instances of the words no matter if the first letter is capitalized or not.\n",
     "\n",
-    "Result of do_lower=True 2m 30.9s\n",
+    "Result of do_lower=True\n",
     "\n",
     "the     10113\n",
     "\n",
@@ -516,7 +517,7 @@
     "\n",
     "i       2933\n",
     "\n",
-    "Result of do_lower=False 2m 27.7s\n",
+    "Result of do_lower=False\n",
     "\n",
     "the     8814\n",
     "\n",
@@ -586,7 +587,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -628,9 +629,11 @@
     "    return all_sentences\n",
     "\n",
     "def write_sentence_boundaries(sentence_list, out):\n",
+    "    index = 0\n",
     "    f = open(out, 'a')\n",
     "    for x in sentence_list:\n",
-    "        f.writelines(str(len(x)-1) + '\\n')\n",
+    "        index = len(x) - 1 + index\n",
+    "        f.writelines(str(index) + '\\n')\n",
     "    f.close()\n",
     "\n",
     "file = open(\"data/brown/editorial.txt\")\n",
@@ -756,7 +759,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.1"
+   "version": "3.11.1 (tags/v3.11.1:a7a450f, Dec  6 2022, 19:58:39) [MSC v.1934 64 bit (AMD64)]"
   },
   "toc": {
    "base_numbering": 1,
