--- a/Homework 1/Homework 1 - Tokenization and segmentation.ipynb
+++ b/Homework 1/Homework 1 - Tokenization and segmentation.ipynb
@@ -499,7 +499,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -745,7 +744,7 @@
    "toc_visible": true
   },
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -759,7 +758,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.1 (tags/v3.11.1:a7a450f, Dec  6 2022, 19:58:39) [MSC v.1934 64 bit (AMD64)]"
+   "version": "3.10.9"
   },
   "toc": {
    "base_numbering": 1,
@@ -776,7 +775,7 @@
   },
   "vscode": {
    "interpreter": {
-    "hash": "41f9feca1f7ada1769a68d5f453eb56a9fc6a3e3d6bbd66cfb9eb83ffb7c3509"
+    "hash": "46e6d79c22797024fcb6a934122ecf943a91cd45ccd571f62f099cd382acd8dd"
    }
   }
  },
