--- a/Homework 3/Homework 3 - Exploring word vectors.ipynb
+++ b/Homework 3/Homework 3 - Exploring word vectors.ipynb
@@ -430,7 +430,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -457,25 +457,39 @@
     "            word2Ind (dict): dictionary that maps word to index (i.e. row/column number) for matrix M.\n",
     "    \"\"\"\n",
     "    words, num_words = distinct_words(corpus)\n",
-    "    M = None\n",
-    "    word2Ind = {}\n",
+    "    M = np.zeros((num_words, num_words))\n",
+    "    word2Ind = {word: index for index, word in enumerate(words)}\n",
     "    \n",
-    "    # ------------------\n",
-    "    # Write your implementation here.\n",
-    "    # ------------------\n",
-    "\n",
+    "    for doc in corpus:\n",
+    "        for i, center_word in enumerate(doc):\n",
+    "            center_word_index = word2Ind[center_word]\n",
+    "            context_window = doc[max(0, i-window_size):i] + doc[i+1:i+window_size+1]\n",
+    "            for context_word in context_window:\n",
+    "                context_word_index = word2Ind[context_word]\n",
+    "                M[center_word_index, context_word_index] += 1\n",
+    "    \n",
     "    return M, word2Ind"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {
     "colab": {},
     "colab_type": "code",
     "id": "xN0oHp88rJPE"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "--------------------------------------------------------------------------------\n",
+      "Passed All Tests!\n",
+      "--------------------------------------------------------------------------------\n"
+     ]
+    }
+   ],
    "source": [
     "# ---------------------\n",
     "# Run this sanity check\n",
