--- a/Homework 3/Homework 3 - Exploring word vectors.ipynb
+++ b/Homework 3/Homework 3 - Exploring word vectors.ipynb
@@ -557,7 +557,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -578,26 +578,34 @@
     "                    In terms of the SVD from math class, this actually returns U * S\n",
     "    \"\"\"    \n",
     "    n_iters = 10     # Use this parameter in your call to `TruncatedSVD`\n",
-    "    M_reduced = None\n",
     "    print(\"Running Truncated SVD over %i words...\" % (M.shape[0]))\n",
-    "    \n",
-    "    # ------------------\n",
-    "    # Write your implementation here.\n",
-    "    # ------------------\n",
-    "\n",
+    "    svd = TruncatedSVD(n_components=k, n_iter=n_iters)\n",
+    "    M_reduced = svd.fit_transform(M)\n",
     "    print(\"Done.\")\n",
     "    return M_reduced"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {
     "colab": {},
     "colab_type": "code",
     "id": "TZMsr1BDrJPJ"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Running Truncated SVD over 10 words...\n",
+      "Done.\n",
+      "--------------------------------------------------------------------------------\n",
+      "Passed All Tests!\n",
+      "--------------------------------------------------------------------------------\n"
+     ]
+    }
+   ],
    "source": [
     "# ---------------------\n",
     "# Run this sanity check\n",
