--- a/Homework 3/Homework 3 - Exploring word vectors.ipynb
+++ b/Homework 3/Homework 3 - Exploring word vectors.ipynb
@@ -1045,18 +1045,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {
     "colab": {},
     "colab_type": "code",
     "id": "Jqe5spyCrJPj"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Polysemous word: duck\n",
+      "Multiple meanings found in top-10 similar words: {'bird'}\n"
+     ]
+    }
+   ],
    "source": [
     "# ------------------\n",
     "# Write your polysemous word exploration code here.\n",
     "\n",
-    "wv_from_bin.most_similar(\"\")\n",
+    "word = \"duck\"\n",
+    "similar_words = wv_from_bin.most_similar(word)\n",
+    "\n",
+    "# Find multiple meanings in top-10 similar words\n",
+    "meanings = set()\n",
+    "for similar_word, _ in similar_words[:10]:\n",
+    "    if \"duck\" in similar_word.lower():\n",
+    "        meanings.add(\"bird\")\n",
+    "    elif \"avoid\" in similar_word.lower():\n",
+    "        meanings.add(\"avoid\")\n",
+    "        \n",
+    "print(f\"Polysemous word: {word}\")\n",
+    "print(f\"Multiple meanings found in top-10 similar words: {meanings}\")\n",
     "\n",
     "# ------------------"
    ]
