--- a/Homework 3/Homework 3 - Exploring word vectors.ipynb
+++ b/Homework 3/Homework 3 - Exploring word vectors.ipynb
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -152,7 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -183,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -349,7 +349,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -372,7 +372,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 6,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -430,7 +430,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 7,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -473,7 +473,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 8,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -557,7 +557,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 9,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -587,7 +587,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 10,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -644,7 +644,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 11,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -673,7 +673,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 12,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -753,7 +753,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 13,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -821,7 +821,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 14,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -843,7 +843,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 15,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -854,7 +854,6 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[==================================================] 100.0% 1662.8/1662.8MB downloaded\n",
       "Loaded vocab size 3000000\n"
      ]
     }
@@ -883,7 +882,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 16,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -929,7 +928,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 17,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -973,7 +972,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 18,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -1045,7 +1044,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 19,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -1112,20 +1111,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {
     "colab": {},
     "colab_type": "code",
     "id": "d4SZFROCrJPm"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Synonyms hot, warm have cosine distance: 0.567846268415451\n",
+      "Antonyms hot, cold have cosine distance: 0.539786159992218\n"
+     ]
+    }
+   ],
    "source": [
     "# ------------------\n",
     "# Write your synonym & antonym exploration code here.\n",
     "\n",
-    "w1 = \"\"\n",
-    "w2 = \"\"\n",
-    "w3 = \"\"\n",
+    "w1 = \"hot\"\n",
+    "w2 = \"warm\"\n",
+    "w3 = \"cold\"\n",
     "w1_w2_dist = wv_from_bin.distance(w1, w2)\n",
     "w1_w3_dist = wv_from_bin.distance(w1, w3)\n",
     "\n",
@@ -1164,13 +1172,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {
     "colab": {},
     "colab_type": "code",
     "id": "VnLNX-7UrJPs"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[('queen', 0.7118193507194519),\n",
+      " ('monarch', 0.6189674139022827),\n",
+      " ('princess', 0.5902431011199951),\n",
+      " ('crown_prince', 0.5499460697174072),\n",
+      " ('prince', 0.5377321839332581),\n",
+      " ('kings', 0.5236844420433044),\n",
+      " ('Queen_Consort', 0.5235945582389832),\n",
+      " ('queens', 0.5181134343147278),\n",
+      " ('sultan', 0.5098593831062317),\n",
+      " ('monarchy', 0.5087411999702454)]\n"
+     ]
+    }
+   ],
    "source": [
     "# Run this cell to answer the analogy -- man : king :: woman : x\n",
     "pprint.pprint(wv_from_bin.most_similar(positive=['woman', 'king'], negative=['man']))"
@@ -1191,18 +1216,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {
     "colab": {},
     "colab_type": "code",
     "id": "qfM5pdaArJPu"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "son:daughter::king:queen\n"
+     ]
+    }
+   ],
    "source": [
     "# ------------------\n",
     "# Write your analogy exploration code here.\n",
     "\n",
-    "pprint.pprint(wv_from_bin.most_similar(positive=[], negative=[]))\n",
+    "a = \"son\"\n",
+    "b = \"\"\n",
+    "c = \"king\"\n",
+    "d = \"queen\"\n",
+    "\n",
+    "analogy = wv_from_bin.most_similar(positive=[d, a], negative=[c])[0]\n",
+    "b = analogy[0]\n",
+    "print(f\"{a}:{b}::{c}:{d}\")\n",
     "\n",
     "# ------------------"
    ]
