--- a/Homework 3/Homework 3 - Exploring word vectors.ipynb
+++ b/Homework 3/Homework 3 - Exploring word vectors.ipynb
@@ -416,7 +416,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {
     "colab_type": "text",
@@ -799,16 +798,6 @@
    "cell_type": "markdown",
    "metadata": {
     "colab_type": "text",
-    "id": "vL315QNkrJPU"
-   },
-   "source": [
-    "#### <font color=\"red\">Write your answer here.</font>\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "colab_type": "text",
     "id": "n4b6QfTurJPU"
    },
    "source": [
@@ -996,7 +985,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {
     "colab_type": "text",
@@ -1085,16 +1073,6 @@
    "cell_type": "markdown",
    "metadata": {
     "colab_type": "text",
-    "id": "gHxZIB1urJPl"
-   },
-   "source": [
-    "#### <font color=\"red\">Write your answer here.</font>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "colab_type": "text",
     "id": "vC7dYhVwrJPm"
    },
    "source": [
@@ -1111,7 +1089,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 29,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -1150,7 +1128,7 @@
     "id": "--_4ir8CrJPo"
    },
    "source": [
-    "#### <font color=\"red\">Write your answer here.</font>"
+    "The counter-intuitive result may be explained by the fact that the vectors for \"hot\" and \"cold\" are more distinct from each other than the vectors for \"hot\" and \"warm\", leading to a smaller cosine distance between \"hot\" and \"cold\". Additionally, the distributional hypothesis may not always accurately reflect the nuances of language and meaning, leading to unexpected associations between words."
    ]
   },
   {
@@ -1254,7 +1232,7 @@
     "id": "8osEFiwGrJPx"
    },
    "source": [
-    "#### <font color=\"red\">Write your answer here.</font>"
+    "This analogy holds because it captures the gender and hierarchy relationship between the words. Just like a king is the male ruler of a kingdom, a queen is the female ruler of a kingdom. The same gender relationship can be observed between man and woman."
    ]
   },
   {
@@ -1270,30 +1248,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {
     "colab": {},
     "colab_type": "code",
     "id": "EBkSVhEorJPy"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[('tails', 0.52464759349823),\n",
+      " ('stubby_tail', 0.5086752772331238),\n",
+      " ('bulbous_forehead', 0.4927935004234314),\n",
+      " ('bushy_tail', 0.4892292618751526),\n",
+      " ('forked_tail', 0.4804065525531769),\n",
+      " ('Pamir_Airways_logo', 0.47923895716667175),\n",
+      " ('underwing', 0.47266650199890137),\n",
+      " ('wingspread', 0.4588666260242462),\n",
+      " ('hind_wings', 0.4577387869358063),\n",
+      " ('palps', 0.45645323395729065)]\n"
+     ]
+    }
+   ],
    "source": [
     "# ------------------\n",
     "# Write your incorrect analogy exploration code here.\n",
-    "\n",
-    "pprint.pprint(wv_from_bin.most_similar(positive=[], negative=[]))\n",
+    "pprint.pprint(wv_from_bin.most_similar(positive=['cat', 'tail'], negative=['dog']))\n",
     "\n",
     "# ------------------"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "colab_type": "text",
-    "id": "a4uK0GBlrJP0"
-   },
-   "source": [
-    "#### <font color=\"red\">Write your answer here.</font>"
    ]
   },
   {
@@ -1312,13 +1296,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {
     "colab": {},
     "colab_type": "code",
     "id": "AmY2ipyJrJP1"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[('bosses', 0.5522644519805908),\n",
+      " ('manageress', 0.49151360988616943),\n",
+      " ('exec', 0.45940810441970825),\n",
+      " ('Manageress', 0.4559843838214874),\n",
+      " ('receptionist', 0.4474116563796997),\n",
+      " ('Jane_Danson', 0.44480547308921814),\n",
+      " ('Fiz_Jennie_McAlpine', 0.4427576959133148),\n",
+      " ('Coronation_Street_actress', 0.44275563955307007),\n",
+      " ('supremo', 0.4409853219985962),\n",
+      " ('coworker', 0.43986251950263977)]\n",
+      "\n",
+      "[('supremo', 0.6097397804260254),\n",
+      " ('MOTHERWELL_boss', 0.5489562749862671),\n",
+      " ('CARETAKER_boss', 0.5375303030014038),\n",
+      " ('Bully_Wee_boss', 0.5333974957466125),\n",
+      " ('YEOVIL_Town_boss', 0.5321705341339111),\n",
+      " ('head_honcho', 0.5281980037689209),\n",
+      " ('manager_Stan_Ternent', 0.525971531867981),\n",
+      " ('Viv_Busby', 0.5256163477897644),\n",
+      " ('striker_Gabby_Agbonlahor', 0.5250812768936157),\n",
+      " ('BARNSLEY_boss', 0.5238943099975586)]\n"
+     ]
+    }
+   ],
    "source": [
     "# Run this cell\n",
     "# Here `positive` indicates the list of words to be similar to and `negative` indicates the list of words to be\n",
@@ -1335,7 +1347,9 @@
     "id": "7wKaOVxIrJP3"
    },
    "source": [
-    "#### <font color=\"red\">Write your answer here.</font>"
+    "A: The top 10 terms that are most similar to \"woman\" and \"boss\" and most dissimilar to \"man\" is the first list.\n",
+    "\n",
+    "B: The top 10 terms that are most similar to \"man\" and \"boss\" and most dissimilar to \"woman\" is the second list."
    ]
   },
   {
@@ -1352,20 +1366,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {
     "colab": {},
     "colab_type": "code",
     "id": "nkKtHk0ErJP4"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[('physician', 0.7806021571159363),\n",
+      " ('doctors', 0.747657299041748),\n",
+      " ('gynecologist', 0.6947518587112427),\n",
+      " ('surgeon', 0.6793398261070251),\n",
+      " ('dentist', 0.6785441040992737),\n",
+      " ('pediatrician', 0.664313793182373),\n",
+      " ('pharmacist', 0.653485894203186),\n",
+      " ('neurologist', 0.6517742872238159),\n",
+      " ('cardiologist', 0.6352297067642212),\n",
+      " ('nurse', 0.6319523453712463)]\n",
+      "\n",
+      "[('mechanical_engineer', 0.6818879246711731),\n",
+      " ('electrician', 0.6528381109237671),\n",
+      " ('technician', 0.6453092694282532),\n",
+      " ('electrical_engineer', 0.6405000686645508),\n",
+      " ('laborer', 0.5982412695884705),\n",
+      " ('foreman', 0.596379816532135),\n",
+      " ('mechanic', 0.5878400206565857),\n",
+      " ('employee', 0.5864596366882324),\n",
+      " ('supervisor', 0.5850368738174438),\n",
+      " ('workers', 0.5807631015777588)]\n"
+     ]
+    }
+   ],
    "source": [
     "# ------------------\n",
     "# Write your bias exploration code here.\n",
     "\n",
-    "pprint.pprint(wv_from_bin.most_similar(positive=[], negative=[]))\n",
+    "pprint.pprint(wv_from_bin.most_similar(positive=['doctor'], negative=[]))\n",
     "print()\n",
-    "pprint.pprint(wv_from_bin.most_similar(positive=[,], negative=[]))\n",
+    "pprint.pprint(wv_from_bin.most_similar(positive=['engineer', 'worker'], negative=[]))\n",
     "\n",
     "# ------------------"
    ]
@@ -1377,7 +1419,7 @@
     "id": "8-kKwQj8rJP6"
    },
    "source": [
-    "#### <font color=\"red\">Write your answer here.</font>"
+    "From the results, we can see that words that are similar to \"doctor\" are mostly associated with medical professions, which are often stereotyped as feminine, such as \"gynecologist\" and \"paediatrician\". On the other hand, words that are similar to \"engineer\" are mostly associated with male-dominated fields such as \"mechanical_engineer\" and \"electrical_engineer\". This suggests that there is some gender bias in the word embeddings."
    ]
   },
   {
@@ -1399,7 +1441,7 @@
     "id": "-k44oEHsrJP7"
    },
    "source": [
-    "#### <font color=\"red\">Write your answer here.</font>"
+    "There are several possible causes of biases in the word vectors. One possible cause is the data used to train the models. Word embeddings are typically trained on large corpora of text, such as news articles or web pages, which may contain biases that reflect the societal and cultural biases of the authors or sources. For example, news articles may have more coverage of men in powerful positions or of women in administrative positions, leading to the associations we observed between certain words and gender and power."
    ]
   },
   {
@@ -1426,7 +1468,7 @@
    "provenance": []
   },
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
