--- a/Graduate/Homework 1/HWK1.ipynb
+++ b/Graduate/Homework 1/HWK1.ipynb
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 93,
    "id": "84910e85-68eb-41ab-996f-65cad5d8071e",
    "metadata": {},
    "outputs": [],
@@ -67,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 94,
    "id": "22459dd5-ddf4-4e53-9e4a-570646a15820",
    "metadata": {},
    "outputs": [],
@@ -79,7 +79,7 @@
     "    with open(fname, 'r') as f_wiki:\n",
     "        data[data_split] = f_wiki.read().lower().split()\n",
     "\n",
-    "vocab = list(set(data['train']))"
+    "vocab = list(set(data['train'] + ['<unk>']))"
    ]
   },
   {
@@ -92,10 +92,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 95,
    "id": "d733449a-e810-4cd1-a03d-e309d41e1dd6",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "train : ['=', 'valkyria', 'chronicles', 'iii', '=', 'senjō', 'no', 'valkyria', '3', ':'] ...\n",
+      "dev : ['=', 'homarus', 'gammarus', '=', 'homarus', 'gammarus', ',', 'known', 'as', 'the'] ...\n",
+      "test : ['=', 'robert', '<unk>', '=', 'robert', '<unk>', 'is', 'an', 'english', 'film'] ...\n",
+      "first 10 words in vocab: ['toilet', 'millennia', 'enclosed', 'blitt', 'kishon', 'explosions', 'nadal', 'acquire', 'redesign', 'puzzle']\n"
+     ]
+    }
+   ],
    "source": [
     "print('train : %s ...' % data['train'][:10])\n",
     "print('dev : %s ...' % data['valid'][:10])\n",
@@ -131,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 96,
    "id": "19adcd85-9e8e-4aae-b32b-05029a953dec",
    "metadata": {},
    "outputs": [],
@@ -144,21 +155,40 @@
     "    # pad (order-1) special tokens to the left\n",
     "    # for the first token in the text\n",
     "    order -= 1\n",
-    "    data = ['<S>'] * order + data # \n",
+    "    data = ['<S>'] * (order - 1) + data\n",
     "    lm = defaultdict(Counter)\n",
     "    for i in range(len(data) - order):\n",
-    "        \"\"\"\n",
-    "        IMPLEMENT ME!\n",
-    "        \"\"\"\n",
-    "        #pass"
+    "        for n in range(1, order + 2):\n",
+    "            history = ' '.join(data[i:i + n - 1])\n",
+    "            word = data[i + n - 1]\n",
+    "            lm[history][word] += 1\n",
+    "    \n",
+    "    for history in lm:\n",
+    "        total_count = sum(lm[history].values())\n",
+    "        for word in lm[history]:\n",
+    "            lm[history][word] /= total_count\n",
+    "\n",
+    "    return lm"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 97,
    "id": "a035c635-bddb-480b-940a-fc38a0482b0c",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "checking empty history ...\n",
+      "checking probability distributions ...\n",
+      "checking lengths of histories ...\n",
+      "checking word distribution values ...\n",
+      "Congratulations, you passed the ngram check!\n"
+     ]
+    }
+   ],
    "source": [
     "def test_ngram_lm():\n",
     "  \n",
@@ -215,7 +245,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 98,
    "id": "9833b768-b01c-4f4e-9bca-70019f18b16d",
    "metadata": {},
    "outputs": [],
@@ -234,10 +264,14 @@
     "    out = context.split()\n",
     "        \n",
     "    for i in range(num_tok):\n",
-    "        \"\"\"\n",
-    "        IMPLEMENT ME!\n",
-    "        \"\"\"\n",
-    "        #pass"
+    "        history_str = ' '.join(history)\n",
+    "        while history_str not in lm and history_str:\n",
+    "            history = history[1:]\n",
+    "            history_str = ' '.join(history)\n",
+    "        dist = lm[history_str] if history_str in lm else {word: 1 / len(vocab) for word in vocab}\n",
+    "        next_word = np.random.choice(list(dist.keys()), p=list(dist.values()))\n",
+    "        out.append(next_word)\n",
+    "        history = (history + [next_word])[-order:]"
    ]
   },
   {
@@ -250,7 +284,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 99,
    "id": "74e4f974-09f0-4fea-9067-7dba785dc0e5",
    "metadata": {},
    "outputs": [],
@@ -261,7 +295,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 100,
    "id": "a21de76f-4864-439d-97a1-d78d250d7358",
    "metadata": {},
    "outputs": [],
@@ -272,7 +306,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 101,
    "id": "0ac1484f-00bb-4519-9134-5b447b68b2b5",
    "metadata": {},
    "outputs": [],
@@ -283,7 +317,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 102,
    "id": "237ee800-b881-4173-8c95-525213b6136f",
    "metadata": {},
    "outputs": [],
@@ -328,25 +362,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 103,
    "id": "87e412a7-2ad8-4a79-a4b5-31bc81295e44",
    "metadata": {},
    "outputs": [],
    "source": [
     "from math import log, exp\n",
     "def compute_perplexity(lm, data, vocab, order=3):\n",
-    "    \n",
-    "    # pad according to order\n",
+    "    \"\"\"\n",
+    "    Compute the perplexity of the language model on test data\n",
+    "    \"\"\"\n",
     "    order -= 1\n",
     "    data = ['<S>'] * order + data\n",
     "    log_sum = 0\n",
     "    for i in range(len(data) - order):\n",
     "        h, w = ' '.join(data[i: i+order]), data[i+order]\n",
-    "        \"\"\"\n",
-    "        IMPLEMENT ME!\n",
-    "        # if h not in lm, back-off to n-1 gram and look up again\n",
-    "        \"\"\"\n",
-    "        #pass"
+    "        while h not in lm and h:\n",
+    "            h = ' '.join(h.split()[1:])\n",
+    "        prob = lm[h][w] if h in lm and w in lm[h] else 1 / len(vocab)\n",
+    "        log_sum += log(prob)\n",
+    "    \n",
+    "    T = len(data) - order\n",
+    "    perplexity = exp(-log_sum / T)\n",
+    "    return perplexity"
    ]
   },
   {
@@ -359,10 +397,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 104,
    "id": "f5293167-78a8-49c6-93dd-cbfdff8c3212",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "order 1 ppl 794.5377104541699\n",
+      "order 2 ppl 260.52326835178815\n",
+      "order 3 ppl 558.3907492614328\n",
+      "order 4 ppl 942.759854189961\n"
+     ]
+    }
+   ],
    "source": [
     "for o in [1, 2, 3, 4]:\n",
     "    lm = train_ngram_lm(data['train'], order=o)\n",
@@ -372,7 +421,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "gpu_ml",
    "language": "python",
    "name": "python3"
   },
@@ -386,7 +435,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.6"
+   "version": "3.9.20"
   }
  },
  "nbformat": 4,
